--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "sharp": "^0.23.2",
     "styled-components": "^4.4.0",
     "styled-normalize": "^8.0.6"
   },
