--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.16.1",
-    "gatsby-cli": "^2.8.22",
+    "gatsby-cli": "^2.8.23",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-offline": "^3.0.16",
@@ -22,6 +22,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
     "react-markdown": "^4.2.2",
     "sharp": "^0.23.2",
     "styled-components": "^4.4.0",
